kkk segundo commit

--- a/página3.html
+++ b/página3.html
@@ -1,12 +1,112 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página 3</title>
+    <title>continuação do HTML Coloquei o que aprendi na aula</title>
 </head>
+
 <body>
-    <H1>Felipe Isaias Bernardino</H1>
-    
+    <header>
+
+        <h1>Sistemas de informação</h1>
+        <p>blog desenvolvido pelos aulos</p>
+    </header>
+    <nav>
+        <a href="index.html"></a>
+        <a href="">sobre</a>
+        <a href="">contato</a>
+
+    </nav>
+    <Main>
+        <section>
+            <h2>Últimas notícias</h2>
+        </section>
+        <article>
+            <h3>Os perigos da IA</h3>
+            <p><strong>Data de publicação:</strong>13 mar 2025 19:23</p>
+            <img src=https://i.ytimg.com/vi/h9sUYJSNpCk/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLAoyS1fBL4Y_7DVUmEI66thpN6Kag
+                width="700px" height="500px" alt="">
+            <img src="" alt=""><button>Saiba mais</button>
+        </article>
+        <article>
+            <h3>O futuro do desenvolvimento web</h3>
+            <p><strong>Data de publicação:</strong> 13 mar 2025 19:33</p>
+            <figure>
+                <img src="assets/img/DW.jpg" alt="">
+                <figcaption>Desafios do DW</figcaption>
+            </figure>
+        </article>
+        <section>
+            <h2>Vìdeos</h2>
+        </section>
+        <article>
+            <h3>Vídeos</h3>
+            <video src="https://videos.rockstargames.com/v4/851s9eme/flv/en-us-1080p.mp4" width="800px" height="600px"
+                autoplay muted control>
+            </video>
+        </article>
+        <article>
+            <h3>Vídeos 3</h3>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/QdBZY2fkU-0?si=YibhIDXfOjooyB65"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+
+        </article>
+        <section>
+            <h2>tabelas</h2>
+            <table border="1">
+                <thead>
+                    <tr>
+                        <th>Linguagem</th>
+                        <th>2024</th>
+                        <th>2023</th>
+                        <th>2022</th>
+                    </tr>
+                </thead>
+
+                <tbody>
+                    <tr>
+                        <td>javascript</td>
+                        <td>1°</td>
+                        <td>2°</td>
+                        <td>3°</td>
+                    </tr>
+                    <tr>
+                        <td>C</td>
+                        <td>1°</td>
+                        <td>2°</td>
+                        <td>3°</td>
+                    </tr>
+                    <tr>
+                        <td>Go</td>
+                        <td>1°</td>
+                        <td>2°</td>
+                        <td>3°</td>
+                    </tr>
+                    <tr>
+                        <td>C+</td>
+                        <td>1°</td>
+                        <td>2°</td>
+                        <td>3°</td>
+                    </tr>
+                </tbody>
+            </table>
+
+
+
+            <!-- Exercicio w3 school-->
+            <!--criar tabela com cronograma semanal de vcs-->
+        </section>
+
+
+
+
+
+    </Main>
 </body>
+
 </html>
