--- a/Página2.html
+++ b/Página2.html
@@ -31,7 +31,7 @@
             <img src="" alt=""><button>Saiba mais</button>
         </article>
         <article>
-            <h3>O futuro do desenvolvimento web</h3>
+            <h3>Estou aprendendo, quanto eu mexo mais aprendo!!!</h3>
             <p><strong>Data de publicação:</strong> 13 mar 2025 19:33</p>
             <figure>
                 <img src="assets/img/DW.jpg" alt="">
