--- a/Página2.html
+++ b/Página2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>continuação do HTML</title>
+    <title>Estou aprendendo a commitar""</title>
 </head>
 
 <body>
