--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Segunda página</title>
+    <title>Foi dificil mas estou aprendendo, demorei 2 dias mais ou menos para aprender</title>
 </head>
 
 <body>
