6 commit, estou aprendendo

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
         <h2>Introdução</h2>
         <p> <b>Lorem ipsum</b> <i>dolor sit</i> <u>amet consectetur</u> adipisicing elit. Numquam quos omnis culpa saepe
             atque eius quo repudiandae delectus rerum consectetur ex dicta incidunt, laboriosam obcaecati, quia maxime,
+            quam laudantium iusto,adipisicing elit. Numquam quos omnis culpa saepe
+            atque eius quo repudiandae delectus rerum consectetur ex dicta incidunt, laboriosam obcaecati, quia maxime,
             quam laudantium iusto.</p>
 
         <h3 id="problema">-Problema </h3>
